--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,14 @@
 		<logback.version>1.1.3</logback.version>
 		<junit.version>4.8.1</junit.version>
 		
+		<poi.version>3.9</poi.version>
+		
+        <spring.data.redis.version>1.7.1.RELEASE</spring.data.redis.version>
+        <jedis.version>2.7.3</jedis.version>
+		
 	</properties>
 	<build>
-		<finalName>topiecms</finalName>
+		<finalName>topieshow</finalName>
 		<plugins>
 			<!-- 解决资源文件的编码问题 -->
 			<plugin>
@@ -428,6 +433,47 @@
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>1.2.0.RELEASE</version>
 		</dependency>
+		
+		
+		<!-- poi start -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-schemas</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <!-- redis -->
+        <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-redis</artifactId>
+                <version>${spring.data.redis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency> 
+            
+            <!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
+<dependency>
+    <groupId>com.belerweb</groupId>
+    <artifactId>pinyin4j</artifactId>
+    <version>2.5.0</version>
+</dependency>
    </dependencies> 
        
 </project>
